--- a/opdracht2/styles/style.css
+++ b/opdracht2/styles/style.css
@@ -1,3 +1,12 @@
+h1 {
+    margin-left: 5%;
+}
+
+h2 {
+    margin-left: 5%;
+    font-size: 1.3em;
+}
+
 #center {
     width: 90%;
     height: 500px;
@@ -7,7 +16,7 @@
 .bar img {
     height: 125px;
     padding: 0px;
-    width: 24.5%;
+    width: 24.71%;
 }
 
 .bar {
