--- a/opdracht3/tutorial volgen/style/style.css
+++ b/opdracht3/tutorial volgen/style/style.css
@@ -18,6 +18,14 @@ button {
     font-weight: bold;
     display: block;
 }
+image {
+}
+
+h2 {
+    text-align: center;
+    width: 30em;
+    margin: 0 auto;
+}
 aside {
     border: 1px solid black;
     padding: 1em 1em;
