--- a/opdracht3/tutorial volgen/style/style.css
+++ b/opdracht3/tutorial volgen/style/style.css
@@ -11,6 +11,15 @@ h1 {
     margin: 1.2em 0 0 0;
 }
 
+article {
+    margin-top: 10em
+}
+
+.gif {
+    margin: 2em auto 0 auto;
+
+}
+
 button {
     width: 10em;
     height: 3em;
@@ -24,17 +33,16 @@ button {
 }
 
 .kompas {
-    height: 2.5em;
-    width: 2.5em;
     position: absolute;
-    left: 9em;
-    top: 3.6em;
+    left: 12.2em;
+    bottom: 8.8em;
+    width: 2.5em;
 }
 
 h2 {
     text-align: center;
-    width: 30em;
-    margin: 0 auto;
+    width: 25em;
+    margin: -4em auto 0 auto;
 }
 
 section {
