--- a/opdracht3/tutorial volgen/style/style.css
+++ b/opdracht3/tutorial volgen/style/style.css
@@ -17,7 +17,76 @@ article {
 
 .gif {
     margin: 2em auto 0 auto;
+}
 
+
+.loadingscreen {
+    z-index: 2;
+    width: 100%;
+    height: 100%;
+    background-color: white;
+    display: none;
+}
+
+section img {
+    margin: auto auto;
+}
+
+.strand {
+    width: 100%;
+    height: 10em;
+    position: absolute;
+    bottom: 0;
+}
+
+.hoek {
+    position: absolute;
+    top: -4em;
+    right: -4em;
+    height: 10em;
+    width: 10em;
+}
+
+.wind {
+    animation: waaien;
+    animation-duration: 60s;
+}
+
+.vliegtuig {
+    position: absolute;
+    top: 28em;
+    left: -25em;
+    animation: vliegen;
+    animation-duration: 15s;
+    animation-timing-function: linear;
+
+}
+
+@keyframes vliegen {
+    0% {
+        left: -25em;
+    }
+    100% {
+        left: 60em;
+    }
+}
+
+@keyframes waaien {
+    0% {
+        left: 2em;
+    }
+    45% {
+        left 10em;
+    }
+    50% {
+        left: 10.5em;
+    }
+    55% {
+        left: 10em;
+    }
+    100% {
+        left: 2em;
+    }
 }
 
 button {
@@ -43,6 +112,7 @@ h2 {
     text-align: center;
     width: 25em;
     margin: -4em auto 0 auto;
+    display: none;
 }
 
 section {
@@ -58,6 +128,7 @@ aside {
     height: 10em;
     visibility: hidden;
     position: absolute;
+    left: 2em;
     background-image: url('../img/wolk.png');
     background-size: 22em;
     background-repeat: no-repeat;
